Refactor | Style: - discount_percent col rename - style changes for table card's

--- a/dining-booking-erp-ui/src/components/Components.css
+++ b/dining-booking-erp-ui/src/components/Components.css
@@ -2,9 +2,9 @@
     display: flex;
 }
 
-.full-height {
-    height: 100vh;
-}
+/* .full-height {
+    height: 100%;
+} */
 
 .half-width {
     max-width: 50%;
@@ -16,4 +16,8 @@
 
 .txt-align-center {
     text-align: center;
+}
+
+.width-300 {
+    width: 300;
 }
