feat(ui): Added table setting under menu

--- a/dining-booking-erp-ui/src/index.css
+++ b/dining-booking-erp-ui/src/index.css
@@ -1,13 +1,27 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.d-flex {
+  display: flex;
+}
+
+.justify-content-end {
+  justify-content: flex-end;
+}
+
+.full-height {
+  height: 100%;
+}
+
+.half-width {
+  max-width: 50%;
+}
+
+.min-full-height {
+  min-height: 100vh;
+}
+
+.txt-align-center {
+  text-align: center;
 }
