--- a/dining-booking-erp-ui/src/index.css
+++ b/dining-booking-erp-ui/src/index.css
@@ -58,10 +58,10 @@ body {
   margin: 5px;
 }
 
-.ant-btn-primary {
+/* .ant-btn-primary {
   background-color: #65B740 !important;
   color: #fff !important;
-} 
+}  */
 
 .primary-btn {
   background-color: #65B740 !important;
